flux/apps/base/monitoring-extras/trivy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trivy-operator-metrics
  namespace: trivy-system
  labels:
    app.kubernetes.io/name: trivy-operator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: trivy-operator
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
